--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -146,7 +146,7 @@ jobs:
 
    dist-electron:
      needs: [test, lint, style, carve]
-     if: github.event_name == 'push' && startsWith(github.ref, "refs/tags/v")
+     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
      runs-on: ${{ matrix.os }}
      env:
        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
