--- a/package.json
+++ b/package.json
@@ -46,11 +46,6 @@
         "AppImage"
       ],
       "category": "Office"
-    },
-    "publish": {
-      "provider": "s3",
-      "bucket": "athens-apps",
-      "region": "us-east-2"
     }
   },
   "dependencies": {
@@ -117,24 +112,19 @@
         "section": "Performance"
       },
       {
-        "type": "style",
-        "hidden": true
+        "type": "style"
       },
       {
-        "type": "chore",
-        "hidden": true
+        "type": "chore"
       },
       {
-        "type": "test",
-        "hidden": true
+        "type": "test"
       },
       {
-        "type": "build",
-        "hidden": true
+        "type": "build"
       },
       {
-        "type": "ci",
-        "hidden": true
+        "type": "ci"
       }
     ]
   }
