ci: publish to gh

--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
         "AppImage"
       ],
       "category": "Office"
+    },
+    "publish": {
+      "provider": "github"
     }
   },
   "dependencies": {
